tablet and desktop version completed

--- a/index.html
+++ b/index.html
@@ -80,15 +80,17 @@
 
     <div class="services">
         <article class="wrapper">
+            
+        </article>
+    <div class="service-items-wrapper">
             <h2 class="text-white">
                 Our Services
             </h2>
             <p class="text-white">
                 <strong style="color: #F97B2D;">We Offer Professional IT Solutions</strong><br>
                 We empower individuals, businesses and organizations with Information Technology to  achieve their goals and objectives. 
-            </p>
-        </article>
-       <div class="service-items">
+            </p><br>
+        <div class="service-items">
             <div class="service-item">
                 <h4>
                     IT Education
@@ -157,6 +159,7 @@
             </div>
         </div>
     </div>
+    </div>
 
     <div class="blog">
         <article class="wrapper">
@@ -204,7 +207,7 @@
             <div class="carousel-inner">
               <div class="carousel-item active" data-bs-interval="10000">
                 <article class="text-center">
-                    <p>
+                    <p class="text-center">
                         "Are you feeling overwhelmed by the complexities of  your project?"
                     </p>
                     <div class="client-info">
@@ -274,6 +277,9 @@
         </div>
     </div>
 </main>
+<button onclick="topFunction()" id="myBtn" title="Go to top">
+    <i class="fa fa-arrow-up"></i>
+</button>
 <footer class="footer">
     <div class="contact" id="contact">
         <h2 class="text-white text-center">
@@ -307,5 +313,6 @@
         </div>
     </div>
 </footer>
+<script src="scripts/script.js"></script>
 </body>
 </html>
