--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="fa icon" type="short icon" href="images/logo.png">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/w3.css">
     <script src="https://kit.fontawesome.com/c42d26af79.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <title>Site | GenTech Consult</title>
@@ -39,7 +40,7 @@
                   </li> 
                 </ul>
                 <span class="nav-text">
-                    <div >
+                    <div class="w3-animate-zoom">
                         <a class="socials" href="#"><i class="fa fa-linkedin"></i></a>
                         <a class="socials" href="#"><i class="fa fa-youtube"></i></a>
                         <a class="socials" href="#"><i class="fa fa-instagram"></i></a>
@@ -54,7 +55,7 @@
 
     </div>
 <main>
-    <div class="about-us wrapper">
+    <div class="about-us wrapper w3-animate-right">
         <h2>
             IT Consulting <br>
             & Services
@@ -82,7 +83,7 @@
         <article class="wrapper">
             
         </article>
-    <div class="service-items-wrapper">
+    <div class="service-items-wrapper w3-animate-fading">
             <h2 class="text-white">
                 Our Services
             </h2>
@@ -161,7 +162,7 @@
     </div>
     </div>
 
-    <div class="blog">
+    <div class="blog w3-center w3-animate-zoom">
         <article class="wrapper">
             <h2 class="text-center" style="color: #F97B2D;">
                 <strong>-</strong> Our Blog <strong>-</strong>
@@ -195,7 +196,7 @@
        </div>
     </div>
 
-    <div class="clients-reviews">
+    <div class="clients-reviews w3-animate-left">
         <h4 class="text-center">Testimonials</h4>
 
         <div id="carouselExampleDark" class="carousel carousel-dark slide">
