main amination modified

--- a/index.html
+++ b/index.html
@@ -83,15 +83,15 @@
         <article class="wrapper">
             
         </article>
-    <div class="service-items-wrapper w3-animate-fading">
-            <h2 class="text-white">
+    <div class="service-items-wrapper w3-animate-">
+            <h2 class="text-white w3-animate-zoom">
                 Our Services
             </h2>
-            <p class="text-white">
+            <p class="text-white w3-animate-opacity">
                 <strong style="color: #F97B2D;">We Offer Professional IT Solutions</strong><br>
                 We empower individuals, businesses and organizations with Information Technology to  achieve their goals and objectives. 
             </p><br>
-        <div class="service-items">
+        <div class="service-items w3-animate-opacity">
             <div class="service-item">
                 <h4>
                     IT Education
