--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <a class="nav-link" href="#">Our Services</a>
                   </li>   
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Blog</a>
+                    <a class="nav-link" href="#blog">Blog</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="#contact">Contact Us</a>
