Changed strong tags to bold at the address section

--- a/index.html
+++ b/index.html
@@ -303,9 +303,9 @@
         </div>
         <div class="map-wrapper w3-animate-opacity">
             <div class="contact-info text-center">
-                <p><strong>Address.</strong> PLT. 8 A BLK. IX Asafo</p>
-                <p><strong>Tel.</strong> +233(0) 599614196</p>
-                <p><strong>Email.</strong> info@gentechconsult.com</p>
+                <p><b>Address.</b> PLT. 8 A BLK. IX Asafo</p>
+                <p><b>Tel.</b> +233(0) 599614196</p>
+                <p><b>Email.</b> info@gentechconsult.com</p>
             </div>
             <iframe class="location-map"
             frameborder="0"
