--- a/index.html
+++ b/index.html
@@ -15,41 +15,42 @@
     <header class="sticky-top">
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
-            <a class="navbar-brand w3-animate-opacity" href="#">
-                <img src="images/logo.png" alt="Logo" class="d-inline-block align-text-top logo">
+                <a class="navbar-brand w3-animate-opacity" href="#">
+                    <img src="images/logo.png" alt="Logo" class="d-inline-block align-text-top logo">
                 </a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarText">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0 w3-animate-opacity">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">About Us</a>
-                  </li> 
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Our Services</a>
-                  </li>   
-                  <li class="nav-item">
-                    <a class="nav-link" href="#blog">Blog</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#contact">Contact Us</a>
-                  </li> 
-                </ul>
-                <span class="nav-text">
-                    <div class="w3-animate-zoom">
-                        <a class="socials" href="#"><i class="fa fa-linkedin"></i></a>
-                        <a class="socials" href="#"><i class="fa fa-youtube"></i></a>
-                        <a class="socials" href="#"><i class="fa fa-instagram"></i></a>
-                        <a class="socials" href="#"><i class="fa fa-twitter"></i></a>
-                    </div>
-                </span>
-              </div>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
+                        aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarText">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0 w3-animate-opacity" id="mainNav">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">About Us</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Our Services</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#blog">Blog</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#contact">Contact Us</a>
+                        </li>
+                    </ul>
+                    <span class="nav-text">
+                        <div class="w3-animate-zoom">
+                            <a class="socials" href="#"><i class="fa fa-linkedin"></i></a>
+                            <a class="socials" href="#"><i class="fa fa-youtube"></i></a>
+                            <a class="socials" href="#"><i class="fa fa-instagram"></i></a>
+                            <a class="socials" href="#"><i class="fa fa-twitter"></i></a>
+                        </div>
+                    </span>
+                </div>
             </div>
-          </nav>
+        </nav>
     </header>
     <div class="banner">
 
