landing page completed

--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
                             <a class="nav-link active" aria-current="page" href="#">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">About Us</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Our Services</a>
+                            <a class="nav-link" href="#services">Our Services</a>
+                        </li>                       
+                         <li class="nav-item">
+                            <a class="nav-link" href="about-us.html">About Us</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#blog">Blog</a>
@@ -80,7 +80,7 @@
         </span>
     </div>
 
-    <div class="services">
+    <div class="services" id="services">
         <article class="wrapper">
             
         </article>
