--- a/about-us.html
+++ b/about-us.html
@@ -1,18 +1,110 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="fa icon" type="short icon" href="images/logo.png">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="styles/style.css">
-    <script src="https://kit.fontawesome.com/c42d26af79.js" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-    <title>Site | GenTech Consult</title>
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="fa icon" type="short icon" href="images/logo.png">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
+        <link rel="stylesheet" href="styles/style.css">
+        <link rel="stylesheet" href="styles/w3.css">
+        <script src="https://kit.fontawesome.com/c42d26af79.js" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+        <title>Site | GenTech Consult</title>
+    </head>
 <body>
-   
 
+    <header class="sticky-top">
+        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <div class="container-fluid">
+                <a class="navbar-brand w3-animate-opacity" href="#">
+                    <img src="images/logo.png" alt="Logo" class="d-inline-block align-text-top logo">
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
+                        aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarText">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0 w3-animate-opacity" id="mainNav">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="index.html#services">Our Services</a>
+                        </li>                       
+                         <li class="nav-item">
+                            <a class="nav-link" href="#">About Us</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="blog.html">Blog</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#contact">Contact Us</a>
+                        </li>
+                    </ul>
+                    <span class="nav-text">
+                        <div class="w3-animate-zoom">
+                            <a class="socials" href="#"><i class="fa fa-linkedin"></i></a>
+                            <a class="socials" href="#"><i class="fa fa-youtube"></i></a>
+                            <a class="socials" href="#"><i class="fa fa-instagram"></i></a>
+                            <a class="socials" href="#"><i class="fa fa-twitter"></i></a>
+                        </div>
+                    </span>
+                </div>
+            </div>
+        </nav>
+    </header>
+    <div class="banner">
+
+    </div>
+
+    <!--main content here-->
+
+
+    <button onclick="topFunction()" id="myBtn" title="Go to top">
+    <i class="fa fa-arrow-up"></i>
+</button>
+<footer class="footer">
+    <h2 class="text-white text-center">
+        Contact Us
+    </h2>
+    <div class="footer-info">
+        <div class="contact" id="contact">
+            <form class="contact-form">
+                <label>Name*</label>
+                <input type="text" class="text-field">
+                <label>Email*</label>
+                <input type="email"  class="text-field">
+                <label>Message</label>
+                <textarea class="text-field">
     
+                </textarea>
+                <input type="submit" value="Submit" class="submit-btn">
+            </form>
+            <br>
+            
+        </div>
+        <div class="map-wrapper w3-animate-opacity">
+            <div class="contact-info text-center">
+                <p><b>Address.</b> PLT. 8 A BLK. IX Asafo</p>
+                <p><b>Tel.</b> +233(0) 599614196</p>
+                <p><b>Email.</b> info@gentechconsult.com</p>
+            </div>
+            <iframe class="location-map"
+            frameborder="0"
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3977.948835179317!2d-1.6107784!3d6.6844561!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xfdb97614af1c105%3A0xb77346da56b04ec0!2sGenTech%20Consult!5e0!3m2!1sen!2sgh!4v1640386842241!5m2!1sen!2sgh"
+            allowfullscreen
+        ></iframe>
+        </div>
+    </div>
+    <br>
+    <p class="text-center">&copy; GenTech Consult 2023. All Rights Reserved.</p>
+    <div class="text-center">
+        <a class="socials" href="#"><i class="fa fa-linkedin"></i></a>
+        <a class="socials" href="#"><i class="fa fa-youtube"></i></a>
+        <a class="socials" href="#"><i class="fa fa-instagram"></i></a>
+        <a class="socials" href="#"><i class="fa fa-twitter"></i></a>
+    </div>
+</footer>
+<script src="scripts/script.js"></script>
 </body>
 </html>
