about-page completed

--- a/about-us.html
+++ b/about-us.html
@@ -16,7 +16,7 @@
     <header class="sticky-top">
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
-                <a class="navbar-brand w3-animate-opacity" href="#">
+                <a class="navbar-brand w3-animate-opacity" href="index.html">
                     <img src="images/logo.png" alt="Logo" class="d-inline-block align-text-top logo">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
@@ -57,7 +57,77 @@
 
     </div>
 
-    <!--main content here-->
+    <main>
+        <div class="about-us wrapper w3-animate-right">
+            <h2>
+                About Us
+            </h2>
+            <article>
+                <h5>Welcome To Gentech Consult</h5>
+                <p>
+                    Gentech Consult is an I.T company located at Amakom, Kumasi – Ashanti Region of Ghana. We are specialized in Web Development, Systems Installation, 
+                    Digital Marketing, IT Consultancy, etc
+                </p>
+            </article>
+            <!-- <span class="about-cta">
+                <a href="#">
+                    <span class="plus-icon">
+                        <i class="fa fa-plus text-white"></i>
+                    </span>
+                    <span class="plus-txt">
+                        Read More
+                    </span>
+                </a>
+            </span> -->
+        </div>
+        <div class="about-container">
+            <article>
+                <div>
+                    <h2>
+                        Our Mission
+                    </h2>
+                    <h3>We Aim to Build a Better World</h3>
+                    <p>
+                        Our mission is to empower businesses, organizations, 
+                        and individuals by providing them with tailored IT solutions.
+                        Our mission is to empower businesses, organizations, 
+                    </p>
+                    <p>
+                        and individuals by providing them with tailored IT solutions.
+                        Our mission is to empower businesses, organizations, 
+                        and individuals by providing them with tailored IT solutions.
+                    </p>
+
+                    <p>
+                        and individuals by providing them with tailored IT solutions.
+                        Our mission is to empower businesses, organizations.
+                    </p>
+                   
+                </div>
+                <img src="images/mission-img.png" alt="Mission image">
+            </article>
+            <br>
+            <article>
+                <img src="images/mission-img.jpg" alt="Mission image">
+                <div>
+                    <h2>
+                        Our Vision
+                    </h2>
+                    <h3>We Aim to Be a World-Class IT Company</h3>
+                    <p>
+                        Our vision is to be a leading I.T company that drives innovation 
+                        and transforms businesses through cutting-edge technology.
+                        Our vision is to be a leading I.T company that drives innovation 
+                        and transforms businesses through cutting-edge technology
+                        <p>
+                            Our vision is to be a leading I.T company that drives innovation 
+                            and transforms businesses through cutting-edge technology
+                        </p>
+                    </p>
+                </div>
+            </article>
+        </div>
+    </main>
 
 
     <button onclick="topFunction()" id="myBtn" title="Go to top">
@@ -105,6 +175,7 @@
         <a class="socials" href="#"><i class="fa fa-twitter"></i></a>
     </div>
 </footer>
+
 <script src="scripts/script.js"></script>
 </body>
 </html>
