--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
         <article>
             <h5>Welcome To Gentech Consult</h5>
             <p>
-                Gentech Consult is an I.T company located at Amakom, Kumasi – Ashanti Region of Ghana. We are specialized in Web Development, Systems Installation, 
+                Gentech Consult is an I.T company located at Amakom, Kumasi – Ashanti Region of Ghana. 
+                We are specialized in Web Development, Systems Installation, 
                 Digital Marketing, IT Consultancy, etc
             </p>
         </article>
@@ -90,7 +91,8 @@
             </h2>
             <p class="text-white w3-animate-opacity">
                 <strong style="color: #F97B2D;">We Offer Professional IT Solutions</strong><br>
-                We empower individuals, businesses and organizations with Information Technology<br> to  achieve their goals and objectives. 
+                We empower individuals, businesses and organizations with Information Technology<br> 
+                to  achieve their goals and objectives. 
             </p><br>
         <div class="service-items w3-animate-opacity">
             <div class="service-item">
@@ -98,7 +100,8 @@
                     IT Education
                 </h4>
                 <p>
-                    We develop web & mobile Apps for small and medium-scale enterprises: banks, schools, and other organizations.
+                    We are committed to bridging the knowledge gap in I.T. Thus, have competent I.T. training 
+                    facilitators to guide you through your career.
                 </p>
 
                 <a href="#" class="cta"><i class="fa fa-plus"></i> Learn More</a>
@@ -109,7 +112,8 @@
                     Software Solutions
                 </h4>
                 <p>
-                    We develop web & mobile Apps for small and medium-scale enterprises: banks, schools, and other organizations.
+                    We develop web & mobile Apps for small and medium-scale enterprises: banks, schools, 
+                    and other organizations.
                 </p>
 
                 <a href="#" class="cta"><i class="fa fa-plus"></i> Learn More</a>
@@ -120,7 +124,8 @@
                     Network Solutions
                 </h4>
                 <p>
-                    We install, configure, troubleshoot and manage I.T/network systems to suit organizational and personal needs. 
+                    We install, configure, troubleshoot and manage I.T/network systems to suit organizational 
+                    and personal needs. 
                 </p>
 
                 <a href="#" class="cta"><i class="fa fa-plus"></i> Learn More</a>
@@ -131,7 +136,8 @@
                     Project Assistant
                 </h4>
                 <p>
-                    Are you feeling overwhelmed by the complexities of your project? Do you need guidance to successfully complete? We are here to help you.
+                    Are you feeling overwhelmed by the complexities of your project? Do you need guidance to 
+                    successfully complete? We are here to help you.
                 </p>
 
                 <a href="#" class="cta"><i class="fa fa-plus"></i> Learn More</a>
@@ -142,7 +148,8 @@
                     Study Abroad
                 </h4>
                 <p>
-                    We can help you to embark on a journey to study abroad. It is an incredible opportunity to broaden your horizons, and gain a world-class education.
+                    We can help you to embark on a journey to study abroad. It is an incredible opportunity 
+                    to broaden your horizons, and gain a world-class education.
                 </p>
 
                 <a href="#" class="cta"><i class="fa fa-plus"></i> Learn More</a>
@@ -153,7 +160,8 @@
                     Cybersecurity
                 </h4>
                 <p>
-                    In an increasingly interconnected world, cybersecurity has become a paramount concern for individuals and businesses. Let us handle the safety of the digital 
+                    In an increasingly interconnected world, cybersecurity has become a paramount concern for 
+                    individuals and businesses. Let us handle the safety of the digital 
                     well-being of your organization.
                 </p>
 
@@ -178,7 +186,8 @@
                     Chat GPT4
                 </h4>
                 <p>
-                    We develop web & mobile Apps for small and medium-scale enterprises: banks, schools, and other organizations.
+                    We develop web & mobile Apps for small and medium-scale enterprises: banks, schools, 
+                    and other organizations.
                 </p>
 
                 <a href="#" class="cta"><i class="fa fa-plus"></i> Learn More</a>
@@ -189,7 +198,8 @@
                     Humane AI
                 </h4>
                 <p>
-                    We develop web & mobile Apps for small and medium-scale enterprises: banks, schools, and other organizations.
+                    We develop web & mobile Apps for small and medium-scale enterprises: banks, schools, 
+                    and other organizations.
                 </p>
 
                 <a href="#" class="cta"><i class="fa fa-plus"></i> Learn More</a>
@@ -202,9 +212,15 @@
 
         <div id="carouselExampleDark" class="carousel carousel-dark slide">
             <div class="carousel-indicators">
-              <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-              <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
-              <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
+              <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" 
+                class="active" aria-current="true" aria-label="Slide 1">
+              </button>
+              <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" 
+                aria-label="Slide 2">
+              </button>
+              <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" 
+                aria-label="Slide 3">
+              </button>
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active" data-bs-interval="10000">
