blog-page completed

--- a/about-us.html
+++ b/about-us.html
@@ -108,7 +108,7 @@
             </article>
             <br>
             <article>
-                <div>
+                <div>":"
                     <h2>
                         Our Vision
                     </h2>
