--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
     </div>
     </div>
 
-    <div class="blog w3-center w3-animate-zoom">
+    <div class="blog w3-center w3-animate-zoom" id="blog">
         <article class="wrapper">
             <h2 class="text-center" style="color: #F97B2D;">
                 <strong>-</strong> Our Blog <strong>-</strong>
@@ -190,7 +190,7 @@
                     and other organizations.
                 </p>
 
-                <a href="#" class="cta"><i class="fa fa-plus"></i> Learn More</a>
+                <a href="blog.html#chat1" class="cta"><i class="fa fa-plus"></i> Learn More</a>
             </div>
 
             <div class="blog-item">
@@ -202,7 +202,7 @@
                     and other organizations.
                 </p>
 
-                <a href="#" class="cta"><i class="fa fa-plus"></i> Learn More</a>
+                <a href="blog.html" class="cta"><i class="fa fa-plus"></i> Learn More</a>
             </div>
        </div>
     </div>
