Rewriting some of the contents

--- a/blog.html
+++ b/blog.html
@@ -7,9 +7,10 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
         <link rel="stylesheet" href="styles/style.css">
         <link rel="stylesheet" href="styles/w3.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
         <script src="https://kit.fontawesome.com/c42d26af79.js" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-        <title>Site | GenTech Consult</title>
+        <title>Blog | GenTech Consult</title>
     </head>
 <body>
 
@@ -26,7 +27,7 @@
             <div class="collapse navbar-collapse" id="navbarText">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0 w3-animate-opacity" id="mainNav">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                        <a class="nav-link" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="index.html#services">Our Services</a>
@@ -35,7 +36,7 @@
                         <a class="nav-link" href="about-us.html">About Us</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Blog</a>
+                        <a class="nav-link active" aria-current="page" href="">Blog</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#contact">Contact Us</a>
@@ -43,10 +44,10 @@
                 </ul>
                 <span class="nav-text">
                     <div class="w3-animate-zoom">
-                        <a class="socials" href="#"><i class="fa fa-linkedin"></i></a>
-                        <a class="socials" href="#"><i class="fa fa-youtube"></i></a>
-                        <a class="socials" href="#"><i class="fa fa-instagram"></i></a>
-                        <a class="socials" href="#"><i class="fa fa-twitter"></i></a>
+                        <a class="socials" href="https://www.linkedin.com/company/gentechconsult/"><i class="fa fa-linkedin"></i></a>
+                        <a class="socials" href="https://www.youtube.com/gentechconsult"><i class="fa fa-youtube"></i></a>
+                        <a class="socials" href="https://www.tiktok.com/@gentechconsult"><i class="fa-brands fa-tiktok"></i></a>
+                        <a class="socials" href="facebook.com/gentechconsult"><i class="fa fa-facebook"></i></a>
                     </div>
                 </span>
             </div>
@@ -63,8 +64,9 @@
     <article>
         <h5>We keep you updated with the latest trends in  Tech</h5>
         <p>
-            Gentech Consult is an I.T company located at Amakom, Kumasi – Ashanti Region of Ghana. We are specialized in Web Development, Systems Installation, 
-            Digital Marketing, IT Consultancy, etc
+            Welcome to Our Blog section, your go-to destination for insightful and 
+            engaging content on the latest trends, innovations, and thought-provoking 
+            discussions in the ever-evolving world of technology.
         </p>
     </article>
 </div>
