--- a/about-us.html
+++ b/about-us.html
@@ -8,8 +8,9 @@
         <link rel="stylesheet" href="styles/style.css">
         <link rel="stylesheet" href="styles/w3.css">
         <script src="https://kit.fontawesome.com/c42d26af79.js" crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-        <title>Site | GenTech Consult</title>
+        <title>About | GenTech Consult</title>
     </head>
 <body>
 
@@ -26,13 +27,13 @@
                 <div class="collapse navbar-collapse" id="navbarText">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0 w3-animate-opacity" id="mainNav">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                            <a class="nav-link" href="index.html">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="index.html#services">Our Services</a>
                         </li>                       
                          <li class="nav-item">
-                            <a class="nav-link" href="#">About Us</a>
+                            <a class="nav-link active" aria-current="page" href="#">About Us</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="blog.html">Blog</a>
@@ -43,10 +44,10 @@
                     </ul>
                     <span class="nav-text">
                         <div class="w3-animate-zoom">
-                            <a class="socials" href="#"><i class="fa fa-linkedin"></i></a>
-                            <a class="socials" href="#"><i class="fa fa-youtube"></i></a>
-                            <a class="socials" href="#"><i class="fa fa-instagram"></i></a>
-                            <a class="socials" href="#"><i class="fa fa-twitter"></i></a>
+                            <a class="socials" href="https://www.linkedin.com/company/gentechconsult/"><i class="fa fa-linkedin"></i></a>
+                            <a class="socials" href="https://www.youtube.com/gentechconsult"><i class="fa fa-youtube"></i></a>
+                            <a class="socials" href="https://www.tiktok.com/@gentechconsult"><i class="fa-brands fa-tiktok"></i></a>
+                            <a class="socials" href="facebook.com/gentechconsult"><i class="fa fa-facebook"></i></a>
                         </div>
                     </span>
                 </div>
@@ -65,8 +66,9 @@
             <article>
                 <h5>Welcome To Gentech Consult</h5>
                 <p>
-                    Gentech Consult is an I.T company located at Amakom, Kumasi – Ashanti Region of Ghana. We are specialized in Web Development, Systems Installation, 
-                    Digital Marketing, IT Consultancy, etc
+                    Where innovation meets ingenuity in the ever-evolving realm of technology.
+                    Established with a vision to redefine the boundaries of what's possible, 
+                    we are a dynamic and forward-thinking tech company committed to shaping the future through cutting-edge solutions.
                 </p>
             </article>
             <!-- <span class="about-cta">
@@ -86,21 +88,19 @@
                     <h2>
                         Our Mission
                     </h2>
-                    <h3>We Aim to Build a Better World</h3>
+                    <h3>Harnessing the Power of Technology to Build a Better World</h3>
                     <p>
-                        Our mission is to empower businesses, organizations, 
-                        and individuals by providing them with tailored IT solutions.
-                        Our mission is to empower businesses, organizations, 
-                    </p>
-                    <p>
-                        and individuals by providing them with tailored IT solutions.
-                        Our mission is to empower businesses, organizations, 
-                        and individuals by providing them with tailored IT solutions.
-                    </p>
+                        At GenTech Consult, our mission is to pioneer innovative solutions 
+                        that empower individuals and organizations to thrive in the ever-evolving
+                        landscape of technology. We are committed to pushing the boundaries of what
+                        is possible, leveraging cutting-edge advancements to create products and
+                        services that enhance efficiency, connectivity, and overall human experience.
+                        Guided by a relentless pursuit of excellence, we strive to deliver
+                        unparalleled value to our customers, fostering a culture of continuous
+                        improvement and adaptability. Our dedicated team of experts is driven by 
+                        a passion for pushing the frontiers of technology, with a focus on sustainability, 
+                        inclusivity, and ethical practices.
 
-                    <p>
-                        and individuals by providing them with tailored IT solutions.
-                        Our mission is to empower businesses, organizations.
                     </p>
                    
                 </div>
@@ -108,19 +108,25 @@
             </article>
             <br>
             <article>
-                <div>":"
+                <div>
                     <h2>
                         Our Vision
                     </h2>
-                    <h3>We Aim to Be a World-Class IT Company</h3>
-                    <p>
-                        Our vision is to be a leading I.T company that drives innovation 
-                        and transforms businesses through cutting-edge technology.
-                        Our vision is to be a leading I.T company that drives innovation 
-                        and transforms businesses through cutting-edge technology
+                    <h3>We Aim to Be a World-Class IT Company that Businesses can Rely On</h3>
+                        
                         <p>
-                            Our vision is to be a leading I.T company that drives innovation 
-                            and transforms businesses through cutting-edge technology
+                            Driven by a commitment to excellence, we aim to set new benchmarks
+                            in the IT industry by continually pushing boundaries and anticipating
+                            the evolving needs of our clients. Our vision encompasses a holistic
+                            approach to technology, where cutting-edge solutions not only address 
+                            immediate challenges but also contribute to the long-term sustainability 
+                            and resilience of organizations.
+
+                            We aspire to be recognized as a global leader in fostering digital ecosystems that 
+                            prioritize security, scalability, and ethical practices. Our vision extends beyond 
+                            mere technological advancements; we strive to be a catalyst for societal progress 
+                            by leveraging information technology to bridge gaps, foster inclusivity, and 
+                            empower individuals and communities. 
                         </p>
                     </p>
                 </div>
