--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="styles/w3.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <script src="https://kit.fontawesome.com/c42d26af79.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-    <title>Site | GenTech Consult</title>
+    <title>Home | GenTech Consult</title>
 </head>
 <body>
     <header class="sticky-top">
@@ -42,10 +43,10 @@
                     </ul>
                     <span class="nav-text">
                         <div class="w3-animate-zoom">
-                            <a class="socials" href="#"><i class="fa fa-linkedin"></i></a>
-                            <a class="socials" href="#"><i class="fa fa-youtube"></i></a>
-                            <a class="socials" href="#"><i class="fa fa-instagram"></i></a>
-                            <a class="socials" href="#"><i class="fa fa-twitter"></i></a>
+                            <a class="socials" href="https://www.linkedin.com/company/gentechconsult/"><i class="fa fa-linkedin"></i></a>
+                            <a class="socials" href="https://www.youtube.com/gentechconsult"><i class="fa fa-youtube"></i></a>
+                            <a class="socials" href="https://www.tiktok.com/@gentechconsult"><i class="fa-brands fa-tiktok"></i></a>
+                            <a class="socials" href="facebook.com/gentechconsult"><i class="fa fa-facebook"></i></a>
                         </div>
                     </span>
                 </div>
@@ -177,7 +178,7 @@
                 <strong>-</strong> Our Blog <strong>-</strong>
             </h2>
             <p class="text-center">
-                We keep you updated with the latest trends in  Tech
+                Here in our blog, we strive to be more than just a source of information.
             </p>
         </article>
        <div class="blog-items">
