--- a/index.html
+++ b/index.html
@@ -196,11 +196,11 @@
 
             <div class="blog-item">
                 <h4>
-                    Humane AI
+                    Cloud Technologies
                 </h4>
                 <p>
-                    We develop web & mobile Apps for small and medium-scale enterprises: banks, schools, 
-                    and other organizations.
+                    Cloud technologies have revolutionized the way businesses manage and 
+                    deploy their IT resources. Leveraging cloud...
                 </p>
 
                 <a href="blog.html" class="cta"><i class="fa fa-plus"></i> Learn More</a>
@@ -209,7 +209,7 @@
     </div>
 
     <div class="clients-reviews w3-animate-left">
-        <h4 class="text-center">Testimonials</h4>
+        <h4 class="text-center">TESTIMONIALS</h4>
 
         <div id="carouselExampleDark" class="carousel carousel-dark slide">
             <div class="carousel-indicators">
